MJ 09/01/2005
- Fixed a bug in PeakDistribution: it did not initialize as many nodes
  as the number of peaks. Eg with one peak, one node is not initialized.

MJ 06/01/2005
VERSION 0.3 RELEASED
------------------------------------------------------------------
------------------------------------------------------------------

MJ 04/01/2005
- Minor changes to make some docs consistent with actual behavior and
  vice versa

AM 02/01/2005
- Added the "pack" parameter (originally included in WireRegularRandom)
  to all the Wire* classes. When this parameter is present, the pack()
  method is called over the initialized protocol after all links have
  been wired.

MJ 02/01/2005
- Fixed bug in WireScaleFreeBA: it ocasionally generated loop edges and in
  general did not follow the BA model.

AM 30/12/2004
- Modified Makefile to remove "distributions" from the list of
  packages that are inserted in the distribution.

AM 30/12/2004
- Modified aggregation to use to the new vector package. All the
  implementation now use double instead of float.

MJ 30/12/2004
- Refactoring of classes that have to do with vector-like operations
  on an array of values, where each element of the array is stored
  by an instance of a SingleValue protocol. A new package called
  peersim.vector was created and everything is moved there.
- New classes dealing with vectors (see above) are added such as
  observers and dynamics, into package peersim.vector.

MJ 27/12/2004
- Changed print in IncrementalFreq to print only those lines that have
  non-zero frequency. Thanks to Spyros Voulgaris for pointing out the
  problem.
- Some minor refactoring and docs enhancement.

GJ 19/12/2004
- Fixed a Scamp cast bug in order to compile on JDK 1.5 . 

MJ 16/12/2004
- Fixed docs bug in FastConfig, thanks to Spyros Voulgaris, and added
  hasLinkable.

GJ 15/12/2004
- Added ExtendedRandom class to support power-law distribution generation
  (thanks to Simon Patarin for this code).